{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 759,
  "lineage": "19ede2ba-1988-f26d-01cd-8ace6ffdc24c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e66f5495b4efdd0f",
            "arn": "arn:aws:ec2:sa-east-1:785952516872:instance/i-06bd3a75f852d346d",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06bd3a75f852d346d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "testKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01bba8f4214fb86c4",
            "private_dns": "ip-10-0-0-109.sa-east-1.compute.internal",
            "private_ip": "10.0.0.109",
            "public_dns": "ec2-15-228-13-234.sa-east-1.compute.amazonaws.com",
            "public_ip": "15.228.13.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f8c1430323ad8ba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0684a84bf5ea0a7f5",
            "tags": {
              "Name": "TestBack"
            },
            "tags_all": {
              "Name": "TestBack"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07687555446436db9"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.test-sg",
            "aws_subnet.subnet-back",
            "aws_vpc.vpc",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e66f5495b4efdd0f",
            "arn": "arn:aws:ec2:sa-east-1:785952516872:instance/i-0ddaab77993542e35",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ddaab77993542e35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "testKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be77d099253f2167",
            "private_dns": "ip-10-0-0-91.sa-east-1.compute.internal",
            "private_ip": "10.0.0.91",
            "public_dns": "ec2-18-231-149-93.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.231.149.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03911a5ba5975d65c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0684a84bf5ea0a7f5",
            "tags": {
              "Name": "devsClan-backend"
            },
            "tags_all": {
              "Name": "devsClan-backend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07687555446436db9"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.test-sg",
            "aws_subnet.subnet-back",
            "aws_vpc.vpc",
            "data.template_file.user_data_server",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e66f5495b4efdd0f",
            "arn": "arn:aws:ec2:sa-east-1:785952516872:instance/i-093764386a405a58b",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093764386a405a58b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "testKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05571101b3f5b5033",
            "private_dns": "ip-10-0-0-31.sa-east-1.compute.internal",
            "private_ip": "10.0.0.31",
            "public_dns": "ec2-18-231-168-228.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.231.168.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0440e03eec01e41b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6cbd5aed123dacf",
            "tags": {
              "Name": "TestFront"
            },
            "tags_all": {
              "Name": "TestFront"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07687555446436db9"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.test-sg",
            "aws_subnet.subnet-front",
            "aws_vpc.vpc",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e66f5495b4efdd0f",
            "arn": "arn:aws:ec2:sa-east-1:785952516872:instance/i-034407abb893f9dd7",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034407abb893f9dd7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f8131d4e18de1090",
            "private_dns": "ip-10-0-0-33.sa-east-1.compute.internal",
            "private_ip": "10.0.0.33",
            "public_dns": "ec2-18-231-176-186.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.231.176.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e962bdf55ee21a6f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6cbd5aed123dacf",
            "tags": {
              "Name": "devsClan-frontend"
            },
            "tags_all": {
              "Name": "devsClan-frontend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07687555446436db9"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.test-sg",
            "aws_subnet.subnet-front",
            "aws_vpc.vpc",
            "data.template_file.user_data_client",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:785952516872:internet-gateway/igw-020798e9f7c0900e0",
            "id": "igw-020798e9f7c0900e0",
            "owner_id": "785952516872",
            "tags": {
              "Name": "test-igw"
            },
            "tags_all": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-0fae51a731cf49231"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:785952516872:route-table/rtb-08a7055b2a2db0cc0",
            "id": "rtb-08a7055b2a2db0cc0",
            "owner_id": "785952516872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020798e9f7c0900e0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-public-crt"
            },
            "tags_all": {
              "Name": "test-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fae51a731cf49231"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-crta-public-subnet-back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4f1b9e37fb36d0b",
            "route_table_id": "rtb-08a7055b2a2db0cc0",
            "subnet_id": "subnet-0684a84bf5ea0a7f5"
          },
          "dependencies": [
            "aws_route_table.test-public-crt",
            "aws_subnet.subnet-back",
            "aws_vpc.vpc",
            "aws_internet_gateway.test-igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-crta-public-subnet-front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fab813266df9c5e",
            "route_table_id": "rtb-08a7055b2a2db0cc0",
            "subnet_id": "subnet-0d6cbd5aed123dacf"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_route_table.test-public-crt",
            "aws_subnet.subnet-front",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:785952516872:security-group/sg-07687555446436db9",
            "description": "Allow everything. Only for testing.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07687555446436db9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "test-sg",
            "name_prefix": "",
            "owner_id": "785952516872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg"
            },
            "tags_all": {
              "Name": "test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fae51a731cf49231"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:785952516872:subnet/subnet-0684a84bf5ea0a7f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.0.64/26",
            "id": "subnet-0684a84bf5ea0a7f5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785952516872",
            "tags": {
              "Name": "testsubnet-back"
            },
            "tags_all": {
              "Name": "testsubnet-back"
            },
            "vpc_id": "vpc-0fae51a731cf49231"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:785952516872:subnet/subnet-0d6cbd5aed123dacf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.0.0/26",
            "id": "subnet-0d6cbd5aed123dacf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785952516872",
            "tags": {
              "Name": "testsubnet-front"
            },
            "tags_all": {
              "Name": "testsubnet-front"
            },
            "vpc_id": "vpc-0fae51a731cf49231"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:785952516872:vpc/vpc-0fae51a731cf49231",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0c63a24a2fca20d6a",
            "default_route_table_id": "rtb-0169adf13508b80e7",
            "default_security_group_id": "sg-0a0bac6b9a51693f6",
            "dhcp_options_id": "dopt-0ac50568eb53d564b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fae51a731cf49231",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0169adf13508b80e7",
            "owner_id": "785952516872",
            "tags": {
              "Name": "testvpc"
            },
            "tags_all": {
              "Name": "testvpc"
            }
          }
        }
      ]
    }
  ]
}